// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering points - bubble Multi series bubble chart - linear can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - bubble Multi series bubble chart - linear can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - bubble Multi series bubble chart - ordinal can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - bubble Multi series bubble chart - ordinal can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - bubble Multi series bubble chart - time can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - bubble Multi series bubble chart - time can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        10,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{point2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "point2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          255,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        20,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - bubble Remove points datum is not in domain Should render 2 points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        1,
      ],
      "mark": null,
      "x": 1,
      "y": 1,
    },
    "x": 50,
    "y": 0,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{__global__}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        0,
      ],
      "mark": null,
      "x": 0,
      "y": 0,
    },
    "x": 0,
    "y": 100,
  },
]
`;

exports[`Rendering points - bubble Single series bubble chart - linear Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - bubble Single series bubble chart - ordinal Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - bubble Single series bubble chart - time Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 2,
      "shape": "circle",
      "stroke": {
        "color": [
          255,
          0,
          0,
          1,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;
